fix: Update .gitignore to enforce privacy for strategic documents

--- a/.gitignore
+++ b/.gitignore
@@ -117,18 +117,10 @@ dmypy.json
 # Pyre
 .pyre/
 
-# STRATEGIC DOCUMENTS - KEEP PRIVATE
-demo-pitch-script.md
-proposal-positioning-guide.md
-immediate-action-plan.md
-competitive-analysis/
-client-research/
-proposal-templates/
-business-strategy/
-sales-materials/
+# PRIVATE STRATEGY DOCUMENTS - NEVER COMMIT
+private-strategy/**/*
 
 # Development notes
 notes/
 private/
 internal/
-repository-strategy.md
