--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,47 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#3a5502",
-        "activityBar.background": "#3a5502",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#01151f",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#3a5502",
-        "statusBar.background": "#182301",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#3a5502",
-        "statusBarItem.remoteBackground": "#182301",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#182301",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#18230199",
-        "titleBar.inactiveForeground": "#e7e7e799"
+    "files.autoSave": "off", // Automatically saves files after a delay
+    "editor.minimap.enabled": false, // Disables the minimap
+    "editor.wordWrap": "off", // Enables word wrapping
+    "files.exclude": {
+        // Hides unnecessary files from the file explorer
+        "**/.DS_Store": true,
+        "**/node_modules": true
     },
-    "peacock.color": "#182301"
+    "editor.tabSize": 2, // Sets tab size to 2 spaces
+    "editor.formatOnSave": false, // Automatically formats code on save{
+    "terminal.integrated.profiles.windows": {
+        "cmd": {
+            "path": "C:\\Windows\\System32\\cmd.exe"
+        },
+        "powershell": {
+            "path": "C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe"
+        }
+    },
+    "terminal.integrated.defaultProfile.windows": "Command Prompt",
+    "terminal.integrated.profiles.linux": {
+        "GitHub CLI": {
+            "path": "/usr/bin/gh"
+        },
+        "Default Shell": {
+            "path": "/bin/bash"
+        }
+    },
+    "terminal.integrated.profiles.osx": {
+        "GitHub CLI": {
+            "path": "/usr/local/bin/gh"
+        },
+        "Default Shell": {
+            "path": "/bin/bash"
+        }
+    },
+    "terminal.integrated.defaultProfileCondition": {
+        "profiles": {
+            "GitHub CLI": "exists(/usr/bin/gh) || exists(/usr/local/bin/gh) || exists(C:\\Program Files\\Git\\bin\\bash.exe)"
+        },
+        "fallbacks": {
+            "windows": "PowerShell",
+            "linux": "Default Shell",
+            "osx": "Default Shell"
+        }
+    }
 }
